# fcfmanager

./: .env  Cargo.toml  README.md
front/: package.json
front/components/: Navigation.js
front/pages/: _app.js  account.js  dashboard.js  index.js
front/styles/: Account.module.css  Dashboard.module.css  Home.module.css  Navigation.module.css  globals.css
src/: main.rs
src/api/: user.rs
src/auth/: validate.rs
static/: 404.html  account.html  dashboard.html  index.html
static/_next/static/AFnhQq2PZnspnpGZe9lN4/: _buildManifest.js
static/_next/static/ESJL4gwxfg2RrOLZFrf20/: _buildManifest.js
static/_next/static/MyyKiot86CqU3IGsLWOJw/: _buildManifest.js
static/_next/static/chunks/: 458-60b905b9a7192824.js  727-352d5079dbc240e3.js  764-e0b88f3e90c49ee8.js
static/_next/static/chunks/pages/: _app-e9549398ce4451de.js  account-109201f4c5ef1694.js  dashboard-04c8788dec2c76ea.js  dashboard-1a15c40d50268faa.js  dashboard-754be6938ad50600.js  index-680008ef04cf79ac.js  index-9ef9d2d4f6f6b47d.js
static/_next/static/css/: 2f67928494a3f5fc.css  4a998a6b125fb4f7.css  4b64d8d7b2bc98fb.css  d507b3c36c3cdb71.css  e47061a0e4c4e8f6.css  e50dafa873de13ed.css  e7b86927380355d0.css
static/_next/static/j4gh6P3akL8j21AxEFzqr/: _buildManifest.js
