[package]
name = "fcfmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
mysql = "24"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.104" }
validator = { version = "0.16.1", features = ["derive"] }
schemars = "0.8.12"
actix-web-jsonschema = "1.1.2"
sha2 = "0.10.7"
hex = "0.4.3"
chrono = "0.4.26"
actix-web-httpauth = "0.8.0"
jsonwebtoken = "8.3.0"
